force-app/main/default/objects/vlocity_ins__PartyMergeMetadata__c/fields/vlocity_ins__CustomImplementationClassName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CustomImplementationClassName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Custom Implementation Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>