force-app/main/default/objects/vlocity_ins__PartyMergeMetadata__c/fields/vlocity_ins__LookupIdField__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__LookupIdField__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lookup Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>